Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3461,7 +3461,7 @@ input, select, textarea {
 }
 
 #skills h2 {
-	padding: 1em;
+	padding-top: 1em;
 }
 
 .skill-category {
